# divel-calendar

./: .project  DivelCalendarGIT.launch  README.md
Android/: AndroidManifest.xml
Android/res/layout/: main.xml
Android/res/values/: strings.xml
Android/src/com/divel/android/calendar/: DivChat.java
res/layout/: addevt.xml  divchat.xml
src/com/divel/android/calendar/: AddEvt.java  DivelCalendar.java
wxWidgets/: AddEvent.cpp  AddEvent.h  CMakeCache.txt  CMakeLists.txt  Calendario.cpp  Calendario.h  DivChat.cpp  DivChat.h  Divel Calendar.cpp  Divel Calendar.desktop.desktop  Divel Calendar.h  DivelCalendar.desktop.desktop.desktop  License.txt  Makefile  PKGBUILD  Resource.h  StdAfx.cpp  StdAfx.h  resource1.h  targetver.h
wxWidgets/debian/: changelog  control  rules
