PROJECT(DIVEL_CALENDAR)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(welcome,"Welcome to Divel Calendar")
SET(PROJECT_NAME_SHORT   "Divel Calendar")
SET(PROJECT_NAME_LONG    "Divel Calendar")
SET(PROJECT_DESCRIPTION  "Day by day storage your cites and events with Divel Calendar")
SET(PROJECT_COPYRIGHT    "Copyright (C) 2012-2013 Adrián Arroyo Calle")
SET(PROJECT_CONTACT      "adrian.arroyocalle@gmail.com")
SET(PROJECT_VENDOR       "Divel")
SET(ORG_WEBSITE          "http://sites.google.com/site/divelmedia")

MESSAGE(STATUS ${welcome})
SET(CMAKE_CXX_FLAGS_DEBUG,"-O0 -g3 -Wall -Werror -W -Wno-return-type")
SET(CMAKE_CXX_FLAGS_RELEASE,"-O2 -pipe")
SET(wxWidgets_USE_LIBS)
FIND_PACKAGE(wxWidgets COMPONENTS gl aui adv html core net base QUIET)

IF(NOT CMAKE_BUILD_TYPE )
   SET( CMAKE_BUILD_TYPE "Release" )
ENDIF()

IF(NOT CMAKE_INSTALL_PREFIX)
  SET(CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/build")
ENDIF()

INCLUDE("${wxWidgets_USE_FILE}")

SET(CALENDAR_SRC 
AddEvent.cpp
Calendario.cpp
DivChat.cpp
"Divel Calendar.cpp"
)
SET(CALENDAR_LIB
${wxWidgets_LIBRARIES}
)
MESSAGE(STATUS ${welcome})
MESSAGE(STATUS ${CMAKE_SYSTEM})
MESSAGE(STATUS ${CMAKE_SYSTEM_PROCESSOR})
MESSAGE(STATUS ${CMAKE_CXX_COMPILER})
MESSAGE(STATUS ${CMAKE_VERSION})
ADD_EXECUTABLE(DIVEL_CALENDAR ${CALENDAR_SRC})
SET_TARGET_PROPERTIES(DIVEL_CALENDAR PROPERTIES RUNTIME "${CMAKE_CURRENT_SOURCE_DIR}/DIVEL_CALENDAR")
TARGET_LINK_LIBRARIES(DIVEL_CALENDAR ${CALENDAR_LIB} )
INSTALL(TARGETS DIVEL_CALENDAR
RUNTIME DESTINATION bin)
# build a CPack driven installer package
include (InstallRequiredSystemLibraries)
set(CPACK_COMPONENTS_ALL_IN_ONE_PACKAGE 1)
set (CPACK_RESOURCE_FILE_LICENSE  
     "${CMAKE_CURRENT_SOURCE_DIR}/License.txt")
set (CPACK_PACKAGE_VERSION_MAJOR "1")
set (CPACK_PACKAGE_VERSION_MINOR "0")
include (CPack)
